# fake-gecko-media

./: Cargo.toml  build.rs
gecko-media/: CMakeLists.txt  GeckoMedia.cpp  GeckoMedia.h  MediaFormatReader.cpp  MediaFormatReader.h
gecko-media/include/mozilla/: Alignment.h  Maybe.h
src/: lib.rs
